# NetSentry

./: .gitignore  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
deploy/: install.sh  netsentry.service
docs/: ARCHITECTURE.md  CHANGELOG.md  GUEST_WIFI.md  HOW_IT_WORKS.el.md  HOW_IT_WORKS.md  INSTALL.md  OPERATIONS.md  PLUGINS.md  README.md  SECURITY.md  THREAT_MODEL.md  TROUBLESHOOTING.md
src/netsentry/: __init__.py  cli.py
src/netsentry/assets/: __init__.py
src/netsentry/core/: __init__.py  ai.py  config.py  events.py  loader.py  netscan.py  notifier.py  plugin.py  router.py  runtime.py  scheduler.py  tag_store.py  vault.py
src/netsentry/plugins/: __init__.py  channel_scan.py  config_backup.py  github_explorer.py  guest_wifi_rotator.py  health_monitor.py  lan_scanner.py  morning_briefing.py  pihole_stats.py  router_info.py  security_actions.py  speedtest.py  telegram_bot.py  traffic_report.py  youtube_bookmarks.py
src/netsentry/plugins/lan_dashboard/: __init__.py
src/netsentry/plugins/lan_dashboard/static/: app.css  dashboard.css  dashboard.js
src/netsentry/plugins/lan_dashboard/templates/: base.html  finding.html  index.html  library.html  overview.html  threats.html
src/netsentry/plugins/threat_detector/: __init__.py  detectors.py  threat_intel.py
src/netsentry/plugins/wifi_monitor/: __init__.py  detect.py
tests/: test_config.py  test_control_plane.py  test_dashboard_auth.py  test_guest_wifi.py  test_health_monitor.py  test_library.py  test_netscan.py  test_property.py  test_router_traffic.py  test_security_authz.py  test_security_hardening.py  test_telegram_bot.py  test_threat_detector.py  test_wifi_monitor.py
