[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netsentry"
version = "0.12.2"
description = "Modular home-network automation: MikroTik + Pi + Telegram. Plugin-based, config-driven, no coding."
authors = [{ name = "wannabexaker" }]
urls = { Homepage = "https://github.com/wannabexaker/NetSentry" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",   # Fernet vault
    "PyYAML>=6",          # config files
    "APScheduler>=3.10",  # in-process cron
    "click>=8",           # CLI
    "flask>=3",           # lan_dashboard HTTP UI
    "qrcode[pil]>=7",     # /guest QR generation
]

[project.optional-dependencies]
ui = [
    "jinja2>=3",
]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "hypothesis>=6",
]

[project.scripts]
netsentry = "netsentry.cli:main"

[tool.hatch.build.targets.wheel]
# `packages` ships the whole src/netsentry tree, including non-Python data files
# (assets/*.png, lan_dashboard/templates/*, lan_dashboard/static/*). A separate
# force-include of those dirs would add them a second time and break the wheel
# build with a duplicate-path error, so it is intentionally omitted.
packages = ["src/netsentry"]
